[package]
name = "simple-counter-hacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = { git = "https://github.com/memflow/memflow", branch = "dev" }
memflow-win32 = { git = "https://github.com/memflow/memflow", branch = "dev" }
clap = "2.33.3"
simple_logger = "1.11.0"
log = "0.4.1"